# cpp-projects

./: .gitignore  CMakeLists.txt
ai/: CMakeLists.txt
ai/source/: ai.cpp  ai.hpp  main.cpp  main.hpp  tokenizer.hpp
engine/: CMakeLists.txt
engine/include/: engine.hpp
engine/source/: common.cpp  common.hpp  engine.cpp  error.cpp  window.cpp
engine/source/core/: common.cpp  core.hpp  error.cpp  window.cpp
simple/: CMakeLists.txt
simple/source/: main.cpp  main.hpp
simple/source/resource/: pixel_shader.hlsl  resource.hpp  resource.rc  vertex_shader.hlsl
snake/: CMakeLists.txt
snake/source/: main.cpp  main.hpp
snake/source/resource/: resource.hpp  resource.rc
snake/source/resource/version/: version.hpp  version.rc
sockets/: CMakeLists.txt
sockets/source/: main.cpp  main.hpp
source/: main.cpp  main.hpp
source/resources/: resources.rc
sysmgr/: CMakeLists.txt
sysmgr/source/resources/: resources.hpp  version.rc
test/: CMakeLists.txt
test/source/: main.cpp  main.hpp
test/source/resource/: resource.hpp
test/source/resource/shaders/: pixel_shader.hlsl  shaders.hpp  shaders.rc  vertex_shader.hlsl
test/source/resource/version/: version.hpp
